--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/starlight": "^0.23.1",
+    "@astrojs/svelte": "^5.4.0",
     "astro": "^4.8.6",
     "dotenv": "^16.4.5",
     "sharp": "^0.32.5",
+    "svelte": "^4.2.17",
     "typescript": "^5.4.5"
   }
 }
