--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "sharp": "^0.32.5",
     "svelte": "^4.2.17",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "unocss": "^0.60.3"
   }
 }
